NEW: Migrate Arquillian to higher version with WildFly 9.0.1.Final AS finished. Need to add proper datasource.